style: fix code fense overflow and add line #

--- a/src/styles/md.sass
+++ b/src/styles/md.sass
@@ -1,14 +1,20 @@
 @use 'variables' as v
 
 html
+  p.katex-block
+    overflow-x: scroll
+    padding: 0 1em
   div.shiki-container
     overflow-x: scroll
     width: 100%
+    border-radius: 1em
     & span.line:not(:last-child)
       min-height: 1em
   pre.shiki
-    border-radius: 1rem
-    padding: 1.2rem 1rem
+    min-width: fit-content
+    padding: 1em 0
+    padding-left: 1.2em
+    padding-right: 1.5em
     margin: 0
     .highlighted
       background: v.$code-highlight-color
@@ -20,6 +26,17 @@ html
       flex-direction: column
       font-family: "JetBrains Mono", monospace
       font-weight: normal
+      // line number https://github.com/shikijs/shiki/issues/3#issuecomment-830564854
+      counter-reset: step
+      counter-increment: step calc(var(--start, 1) - 1)
+      & .line::before 
+        content: counter(step)
+        counter-increment: step
+        width: 1em
+        margin-right: 1em
+        display: inline-block
+        text-align: right
+        color: rgba(115,138,148,.4)
   mark
     background: linear-gradient(to right, rgba(255, 225, 0, .1), rgba(255, 225, 0, .8) 4%, rgba(255, 225, 0, .3)) 0 0
     margin: 0 -0.4em
